CHORE(content): re-write content to better than before

--- a/index.html
+++ b/index.html
@@ -72,10 +72,10 @@
             <div class="hero-slide-overlay"></div>
             <div class="hero-slide-container">
               <div class="hero-slide-content">
-                <h1>CƠ HỘI VIỆC LÀM TẠI ĐỨC ĐANG CHỜ BẠN</h1>
+                <h1>CHẠM TAY ĐẾN GIẤC MƠ ĐỨC - TƯƠNG LAI BỀN VỮNG</h1>
                 <p>
-                  SADAKA HR đồng hành cùng bạn trong hành trình học tập, làm
-                  việc và định cư tại Đức với lộ trình rõ ràng, minh bạch.
+                  SADAKA HR mở ra cánh cửa việc làm thu nhập cao tại Châu Âu, đồng hành cùng bạn kiến tạo sự nghiệp và
+                  cuộc sống định cư ổn định tại CHLB Đức.
                 </p>
               </div>
               <div class="hero-slide-image">
@@ -88,10 +88,10 @@
             <div class="hero-slide-overlay"></div>
             <div class="hero-slide-container">
               <div class="hero-slide-content">
-                <h1>ĐÀO TẠO TIẾNG ĐỨC BÀI BẢN & THỰC TẾ</h1>
+                <h1>CHINH PHỤC TIẾNG ĐỨC - CHÌA KHÓA HỘI NHẬP</h1>
                 <p>
-                  Chương trình đào tạo phù hợp cho người mới bắt đầu, chú trọng
-                  giao tiếp và văn hoá doanh nghiệp Đức.
+                  Kết nối với hệ thống đào tạo chuẩn Châu Âu, chúng tôi giúp bạn xóa bỏ rào cản ngôn ngữ để tự tin giao
+                  tiếp và hòa nhập văn hóa Đức ngay từ ngày đầu.
                 </p>
               </div>
               <div class="hero-slide-image">
@@ -104,10 +104,10 @@
             <div class="hero-slide-overlay"></div>
             <div class="hero-slide-container">
               <div class="hero-slide-content">
-                <h1>QUY TRÌNH TUYỂN DỤNG RÕ RÀNG, MINH BẠCH</h1>
+                <h1>LỘ TRÌNH MINH BẠCH - VỮNG VÀNG PHÁP LÝ</h1>
                 <p>
-                  Tư vấn, định hướng và hỗ trợ hồ sơ để ứng viên tự tin làm việc
-                  tại các doanh nghiệp Đức uy tín.
+                  Cam kết quy trình xử lý hồ sơ rõ ràng, không phát sinh chi phí ẩn. Chúng tôi là điểm tựa pháp lý tin
+                  cậy để bạn an tâm cất cánh.
                 </p>
               </div>
               <div class="hero-slide-image">
@@ -129,10 +129,10 @@
 
       <section class="services-section">
         <div class="services-header">
-          <h2>Dịch vụ của chúng tôi</h2>
+          <h2>HỆ SINH THÁI VIỆC LÀM & ĐỊNH CƯ ĐỨC</h2>
           <p>
-            Các giải pháp nhân sự toàn diện được thiết kế để nâng cao năng lực
-            và hiệu suất của tổ chức bạn.
+            Cung cấp giải pháp trọn gói từ tư vấn đơn hàng, kết nối đào tạo ngôn ngữ đến xử lý hồ sơ pháp lý, giúp người
+            lao động tiếp cận những công việc thu nhập cao tại CHLB Đức.
           </p>
         </div>
 
@@ -144,48 +144,47 @@
               Đào tạo ngôn ngữ
             </div>
 
-            <h3>Chương trình đào tạo ngôn ngữ chuyên nghiệp</h3>
+            <h3>Kết nối đào tạo tiếng Đức chuẩn Châu Âu</h3>
             <p class="service-intro">
-              Trang bị cho đội ngũ của bạn các kỹ năng ngôn ngữ cần thiết để
-              thành công trên thị trường toàn cầu. Các chương trình đào tạo
-              tùy chỉnh của chúng tôi được thiết kế để đáp ứng nhu cầu kinh
-              doanh cụ thể của bạn.
+              Xây dựng nền tảng ngôn ngữ vững chắc giúp bạn tự tin hòa nhập cuộc sống tại Đức.
+              Chúng tôi liên kết với các đơn vị đào tạo hàng đầu để cung cấp lộ trình học tối ưu
+              từ con số 0 đến trình độ B1 trong thời gian ngắn nhất.
             </p>
 
             <ul class="service-list">
               <li>
                 <span class="service-icon material-icons">menu_book</span>
                 <div>
-                  <strong>Tiếng Đức thương mại &amp; Giao tiếp</strong>
+                  <strong>Tiếng Đức A1 - B1 & Giao tiếp</strong>
                   <p>
-                    Đào tạo ngôn ngữ chuyên ngành cho các bối cảnh chuyên
-                    nghiệp.
+                    Chương trình học bám sát khung tham chiếu Châu Âu, chú trọng kỹ năng
+                    nghe - nói để phục vụ phỏng vấn và làm việc thực tế.
                   </p>
                 </div>
               </li>
               <li>
-                <span class="service-icon material-icons">groups</span>
+                <span class="service-icon material-icons">timer</span>
                 <div>
-                  <strong>Nhóm nhỏ &amp; One-on-One Sessions</strong>
+                  <strong>Lớp Cấp tốc & Bán trú</strong>
                   <p>
-                    Các hình thức đào tạo linh hoạt phù hợp với sở thích học
-                    tập.
+                    Mô hình học tập trung cường độ cao giúp rút ngắn thời gian đào tạo,
+                    hỗ trợ người lao động sớm đủ điều kiện xuất cảnh.
                   </p>
                 </div>
               </li>
               <li>
                 <span class="service-icon material-icons">verified</span>
                 <div>
-                  <strong>Đánh giá &amp; Chứng nhận</strong>
+                  <strong>Luyện thi chứng chỉ Goethe/Telc</strong>
                   <p>
-                    Theo dõi tiến trình với các đánh giá định kỳ và chứng nhận
-                    được công nhận.
+                    Tổ chức thi thử và ôn luyện sát đề thi thật, cam kết hỗ trợ tối đa
+                    để học viên đạt chứng chỉ ngôn ngữ (điều kiện bắt buộc xin Visa).
                   </p>
                 </div>
               </li>
             </ul>
 
-            <button class="service-btn">Tìm hiểu thêm</button>
+            <button class="service-btn" onclick="window.location.href='./pages/training.html'">Xem lộ trình học</button>
           </div>
 
           <div class="service-media">
@@ -198,43 +197,51 @@
           <div class="service-text">
             <div class="service-badge">
               <span class="material-icons">work</span>
-              Xuất khẩu lao động
+              Cung ứng nhân lực Quốc tế
             </div>
 
-            <h3>Giải pháp tuyển dụng lao động toàn diện</h3>
+            <h3>Cơ hội việc làm & Định cư tại Đức</h3>
             <p class="service-intro">
-              Từ việc tìm kiếm ứng viên đến onboarding, chúng tôi quản lý toàn
-              bộ quy trình tuyển dụng cho các vị trí quốc tế.
+              Chúng tôi là cầu nối trực tiếp giữa người lao động Việt Nam và các tập đoàn lớn
+              tại Đức. Cam kết mang đến những công việc thu nhập cao, môi trường làm việc
+              an toàn và lộ trình định cư rõ ràng.
             </p>
 
             <ul class="service-list">
               <li>
-                <span class="service-icon material-icons">search</span>
+                <span class="service-icon material-icons">business_center</span>
                 <div>
-                  <strong>Tìm kiếm nhân tài</strong>
+                  <strong>Đơn hàng Đa dạng & Uy tín</strong>
                   <p>
-                    Xác định và thu hút các ứng viên đủ điều kiện phù hợp với
-                    yêu cầu của bạn.
+                    Việc làm chính thức tại các nhà máy, siêu thị (Edeka, Wiesenhof...)
+                    với mức lương và phúc lợi chuẩn theo luật lao động Đức.
                   </p>
                 </div>
               </li>
               <li>
-                <span class="service-icon material-icons">description</span>
+                <span class="service-icon material-icons">verified_user</span>
                 <div>
-                  <strong>Hỗ trợ tài liệu</strong>
-                  <p>Hướng dẫn về visa, giấy phép và tài liệu tuân thủ.</p>
+                  <strong>Pháp lý minh bạch & Visa</strong>
+                  <p>
+                    Đội ngũ luật sư di trú hỗ trợ xử lý hồ sơ trọn gói, tối ưu hóa tỷ lệ
+                    đậu Visa và giấy phép lao động trong thời gian ngắn nhất.
+                  </p>
                 </div>
               </li>
               <li>
-                <span class="service-icon material-icons">support_agent</span>
+                <span class="service-icon material-icons">volunteer_activism</span>
                 <div>
-                  <strong>Hỗ trợ liên tục</strong>
-                  <p>Hỗ trợ tận tâm trước và sau khi triển khai.</p>
+                  <strong>Đồng hành An cư & Hòa nhập</strong>
+                  <p>
+                    Không chỉ đưa đi, chúng tôi hỗ trợ đón tại sân bay, tìm nhà ở,
+                    hướng dẫn hòa nhập và thủ tục bảo lãnh người thân đoàn tụ.
+                  </p>
                 </div>
               </li>
             </ul>
 
-            <button class="service-btn">Tìm hiểu thêm</button>
+            <button class="service-btn" onclick="window.location.href='./pages/recruit.html'">Xem danh sách đơn
+              hàng</button>
           </div>
 
           <div class="service-media">
@@ -249,25 +256,20 @@
           <div class="about-text">
             <p>
               <strong>
-                Được thành lập với tầm nhìn chuyển đổi lĩnh vực quản trị nguồn
-                nhân lực, SADAKA HR đã trở thành đối tác đáng tin cậy của các
-                tổ chức trong việc phát triển và thu hút nhân tài xuất sắc.
+                SADAKA HR định vị là đơn vị tiên phong cung ứng nguồn nhân lực chất lượng cao cho các tập đoàn hàng đầu
+                tại CHLB Đức, giải quyết bài toán thiếu hụt nhân sự quốc tế bằng sự chuyên nghiệp và tử tế.
               </strong>
             </p>
             <p>
-              Đội ngũ chuyên gia tận tâm của chúng tôi sở hữu nhiều năm kinh
-              nghiệm trong tư vấn nhân sự, đào tạo ngôn ngữ và tuyển dụng.
-              Chúng tôi hiểu rằng con người là tài sản quý giá nhất của doanh
-              nghiệp và luôn cam kết đồng hành để giúp bạn phát huy tối đa
-              tiềm năng của họ.
+              Sở hữu mạng lưới đối tác rộng khắp từ các trường đào tạo nghề đến các doanh nghiệp lớn (Edeka,
+              Wiesenhof...), chúng tôi kiến tạo nên một quy trình khép kín: Đào tạo - Tuyển dụng - Định cư. Chúng tôi
+              coi con người là tài sản quý giá nhất, và việc bảo vệ quyền lợi hợp pháp của người lao động là tôn chỉ
+              hoạt động bất di bất dịch.
             </p>
             <p>
-              Với định hướng lấy khách hàng làm trung tâm và bề dày thành tích
-              trong nhiều lĩnh vực, chúng tôi mang đến những giải pháp tạo ra
-              kết quả kinh doanh thực sự. Từ các tập đoàn đa quốc gia đến
-              những doanh nghiệp khởi nghiệp, SADAKA HR luôn linh hoạt điều
-              chỉnh dịch vụ để đáp ứng đúng những thách thức riêng biệt của
-              bạn.
+              Với bề dày kinh nghiệm xử lý hàng trăm bộ hồ sơ khó, SADAKA HR tự tin mang đến những giải pháp việc làm
+              thực tế, thu nhập cao và cơ hội định cư lâu dài. Dù bạn là lao động phổ thông hay nhân sự trình độ cao,
+              chúng tôi luôn có lộ trình phù hợp để giúp bạn tỏa sáng tại môi trường quốc tế.
             </p>
           </div>
 
@@ -298,11 +300,10 @@
 
       <section class="why-section">
         <div class="why-header">
-          <h2>Tại sao nên chọn SADAKA HR?</h2>
+          <h2>TẠI SAO CHỌN SADAKA HR?</h2>
           <p>
-            Chúng tôi kết hợp kinh nghiệm chuyên sâu trong ngành với các giải
-            pháp đổi mới để giúp doanh nghiệp của bạn phát triển trong môi
-            trường cạnh tranh ngày nay.
+            Chúng tôi cam kết "3 KHÔNG": Không phí ẩn, Không đơn ảo, Không đem con bỏ chợ. SADAKA minh bạch lộ trình tài
+            chính và đồng hành cùng bạn từ Việt Nam sang đến tận nước Đức.
           </p>
         </div>
 
