--- a/pages/training.html
+++ b/pages/training.html
@@ -71,7 +71,7 @@
 
                 <div class="slogan" id="training-slogan">
                     <h1>
-                        TẠO ĐIỀU KIỆN HỌC TIẾNG ĐỨC CHO NGƯỜI MỚI.
+                        GIẢI PHÁP NGÔN NGỮ TOÀN DIỆN CHO LAO ĐỘNG VIỆT.
                     </h1>
 
                     <a class="cta-btn" href="./contact.html">Nhận thông tin chuyên
@@ -116,7 +116,7 @@
                     <img src="../assets/img/Germany.jpg" alt="Ảnh công ty SADAKA HR">
                 </div>
                 <div class="about-sadaka">
-                    <h2 class="about-title">Mục tiêu</h2>
+                    <h2 class="about-title">Mục tiêu: "Xóa bỏ rào cản ngôn ngữ - Mở lối đến Châu Âu"</h2>
 
                     <div class="about-text">
                         <p>
