REFACTOR(css): Design layout for blog page and rebuild blog detail layout

--- a/pages/blog_detail.html
+++ b/pages/blog_detail.html
@@ -276,6 +276,8 @@
         </div>
     </div>
 
+    <script src="https://cdn.jsdelivr.net/npm/contentful@latest/dist/contentful.browser.min.js"></script>
+
     <script src="/js/contact_fab.js" defer></script>
     <script src="/js/blog_data.js"></script>
     <script src="/js/blog_render.js"></script>
