--- a/pages/blog.html
+++ b/pages/blog.html
@@ -76,88 +76,7 @@
             </section>
             <!-- Content section -->
             <section class="block-blog">
-                <section class="job-list-section">
-                    <!-- content 1 -->
-                    <a href="./blog_detail.html">
-                        <div class="job-content" id="job-info">
-                            <div class="job-img">
-                                <img src="../assets/img/Slider_2.jpg" alt="Hình ảnh mô tả tuyển dụng">
-                            </div>
-
-                            <div class="title">
-                                <h2>Job title</h2>
-
-                            </div>
-
-                            <div class="short-desc">
-                                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Pariatur velit harum in
-                                    quisquam
-                                    fuga, tempora inventore reprehenderit! Cumque fugit nulla, nemo, a itaque ad
-                                    doloremque
-                                    fuga, tenetur libero labore inventore.
-                                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam ad inventore ut
-                                    corrupti
-                                    sit
-                                    assumenda a laborum exercitationem reprehenderit, sint quaerat hic aperiam magnam
-                                    voluptate
-                                    neque omnis officia expedita natus.</p>
-                            </div>
-
-                            <a href="./blog_detail.html" class="btn-desc" aria-label="Xem chi tiết">
-                                <span class="material-icons">arrow_forward</span>
-                            </a>
-                        </div>
-                    </a>
-                    <!-- content 2 -->
-                    <a href="./blog_detail.html">
-                        <div class="job-content">
-                            <div class="job-img">
-                                <img src="../assets/img/Slider_2.jpg" alt="Hình ảnh mô tả tuyển dụng">
-                            </div>
-
-                            <div class="title">
-                                <h2>Job title</h2>
-
-                            </div>
-
-                            <div class="short-desc">
-                                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Pariatur velit harum in
-                                    quisquam
-                                    fuga, tempora inventore reprehenderit! Cumque fugit nulla, nemo, a itaque ad
-                                    doloremque
-                                    fuga, tenetur libero labore inventore.</p>
-                            </div>
-
-                            <a href="./blog_detail.html" class="btn-desc" aria-label="Xem chi tiết">
-                                <span class="material-icons">arrow_forward</span>
-                            </a>
-                        </div>
-                    </a>
-                    <!-- content 3 -->
-                    <a href="./blog_detail.html">
-                        <div class="job-content">
-                            <div class="job-img">
-                                <img src="../assets/img/Slider_2.jpg" alt="Hình ảnh mô tả tuyển dụng">
-                            </div>
-
-                            <div class="title">
-                                <h2>Job title</h2>
-
-                            </div>
-
-                            <div class="short-desc">
-                                <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Pariatur velit harum in
-                                    quisquam
-                                    fuga, tempora inventore reprehenderit! Cumque fugit nulla, nemo, a itaque ad
-                                    doloremque
-                                    fuga, tenetur libero labore inventore.</p>
-                            </div>
-
-                            <a href="./blog_detail.html" class="btn-desc" aria-label="Xem chi tiết">
-                                <span class="material-icons">arrow_forward</span>
-                            </a>
-                        </div>
-                    </a>
+                <section class="blog-list-section">
                 </section>
             </section>
         </div>
@@ -288,6 +207,8 @@
             </a>
         </div>
     </div>
+
+    <script src="https://cdn.jsdelivr.net/npm/contentful@latest/dist/contentful.browser.min.js"></script>
 
     <script src="/js/contact_fab.js" defer></script>
     <script src="/js/main.js" defer></script>
