CHORE: A little change to show infomation in main page

--- a/index.html
+++ b/index.html
@@ -184,7 +184,8 @@
               </li>
             </ul>
 
-            <button class="service-btn" onclick="window.location.href='./pages/training.html'">Xem lộ trình học</button>
+            <button class="service-btn" onclick="window.location.href='./pages/training.html'">Xem giải pháp của SADAKA
+              HR</button>
           </div>
 
           <div class="service-media">
