STYLE: Format css and add images

--- a/pages/job_detail.html
+++ b/pages/job_detail.html
@@ -300,9 +300,12 @@
         </div>
     </div>
 
+    <script src="https://cdn.jsdelivr.net/npm/contentful@latest/dist/contentful.browser.min.js"></script>
+    <script src="../js/job_detail_render.js"></script>
+
     <script src="/js/contact_fab.js" defer></script>
     <script src="/js/career.js" defer></script>
-    <script src="/js/job_detail_render.js" defer></script>
+    <!-- <script src="/js/job_detail_render.js" defer></script> -->
     <script src="/js/job_detail.js" defer></script>
 </body>
 
