--- a/pages/recruit.html
+++ b/pages/recruit.html
@@ -79,9 +79,11 @@
             </section>
 
             <!-- Job List -->
-            <div class="job-list-container" id="job-list">
-                Loading jobs...
-            </div>
+            <section class="job-list-section">
+                <div id="job-list-container" class="job-grid">
+                    <p style="text-align:center">Đang tải danh sách việc làm...</p>
+                </div>
+            </section>
 
         </div>
         <!-- =========== FOOTER =========== -->
@@ -214,9 +216,8 @@
 
     <script src="https://cdn.jsdelivr.net/npm/contentful@latest/dist/contentful.browser.min.js"></script>
 
-    <script src="/js/job_detail_render.js" defer></script>
     <script src="/js/contact_fab.js" defer></script>
-    <!-- <script src="/js/job_list.js" defer></script> -->
+    <script src="/js/job_list.js" defer></script>
     <script src="/js/main.js" defer></script>
 </body>
 
