STYLE: Fix layout and remake style for some elements in job_detail page

--- a/pages/job_detail.html
+++ b/pages/job_detail.html
@@ -67,8 +67,8 @@
         <!-- =========== CONTENT =========== -->
         <div class="main-sections">
             <div class="job-header">
-                <div class="job-slider">
-                    <img id="jobSliderImg" src="../assets/img/Edeka.jpg" alt="Ảnh minh họa">
+                <div id="job-slider" class="hero-img">
+                    <img class="slider-img" id="jobSliderImg" src="../assets/img/Edeka.jpg" alt="Ảnh minh họa">
                 </div>
 
                 <div class="title">
@@ -306,7 +306,7 @@
     <script src="/js/contact_fab.js" defer></script>
     <script src="/js/career.js" defer></script>
     <!-- <script src="/js/job_detail_render.js" defer></script> -->
-    <script src="/js/job_detail.js" defer></script>
+    <!-- <script src="/js/job_detail.js" defer></script> -->
 </body>
 
 
