FEAT & STYLE: Event handle for contact-fab and change a little style of some elements.

--- a/index.html
+++ b/index.html
@@ -582,15 +582,15 @@
         <span class="item-text">LIÊN HỆ QUA EMAIL</span>
       </a>
 
-      <a class="panel-item" href="tel:+84901234567">
+      <a class="panel-item" href="tel:+84909908353">
         <span class="item-icon phone">☎</span>
-        <span class="item-text">GỌI NGAY: 0931.495.639</span>
+        <span class="item-text">GỌI NGAY: 090 990 8353</span>
       </a>
     </div>
   </div>
 
-  <script src="/js/contact_form_gas.js" defer></script>
   <script src="/js/contact_fab.js" defer></script>
+  <script src="/js/contact_form_gas.js" defer></script>
   <script src="/js/main.js" defer></script>
 </body>
 
