--- a/pages/training.html
+++ b/pages/training.html
@@ -107,7 +107,7 @@
                 </div>
 
                 <div class="image-training">
-                    <img src="../assets/img/Germany.jpg" alt="Ảnh công ty SADAKA HR">
+                    <img src="../public/img/Learn_Germany.jpg" alt="Ảnh công ty SADAKA HR">
                 </div>
             </section>
             <!-- Content 02 -->
@@ -140,50 +140,38 @@
                 </div>
             </section>
 
-            <section class="roadmap-section" style="background-color: #f8f9fa; padding: 60px 0;">
-                <div class="container" style="max-width: 1200px; margin: 0 auto; text-align: center; padding: 50px;">
-                    <h2 style="color: #d32f2f; margin-bottom: 40px; text-transform: uppercase; font-size: 30px;">
-                        Lộtrình đồng hành cùng học viên</h2>
+            <section class="roadmap-section">
+                <div class="container">
+                    <h2>Lộ trình đồng hành cùng học viên</h2>
 
-                    <div class="steps-container"
-                        style="display: flex; justify-content: space-between; flex-wrap: wrap; gap: 20px;">
-
-                        <div class="step-item"
-                            style="flex: 1; min-width: 200px; padding: 20px; background: white; border-radius: 8px; box-shadow: 0 4px 6px rgba(0,0,0,0.1);">
-                            <div class="step-icon" style="font-size: 40px; color: #d32f2f; margin-bottom: 15px;">01
-                            </div>
-                            <h3 style="font-size: 18px; margin-bottom: 10px;">Đánh giá & Xếp lớp</h3>
-                            <p style="font-size: 14px; color: #666;">Kiểm tra năng lực, tư vấn lộ trình học cấp tốc hay
-                                tiêu chuẩn phù hợp với từng cá nhân.</p>
+                    <div class="steps-container">
+                        <div class="step-item">
+                            <div class="step-icon">01</div>
+                            <h3>Đánh giá & Xếp lớp</h3>
+                            <p>Kiểm tra năng lực, tư vấn lộ trình học cấp tốc hay tiêu chuẩn phù hợp với từng cá nhân.
+                            </p>
                         </div>
 
-                        <div class="step-item"
-                            style="flex: 1; min-width: 200px; padding: 20px; background: white; border-radius: 8px; box-shadow: 0 4px 6px rgba(0,0,0,0.1);">
-                            <div class="step-icon" style="font-size: 40px; color: #d32f2f; margin-bottom: 15px;">02
-                            </div>
-                            <h3 style="font-size: 18px; margin-bottom: 10px;">Đào tạo tại đối tác</h3>
-                            <p style="font-size: 14px; color: #666;">Học tập tại các trung tâm top đầu với giáo trình
-                                chuẩn Châu Âu dưới sự giám sát của Sadaka.</p>
+                        <div class="step-item">
+                            <div class="step-icon">02</div>
+                            <h3>Đào tạo tại đối tác</h3>
+                            <p>Học tập tại các trung tâm top đầu với giáo trình chuẩn Châu Âu dưới sự giám sát của
+                                Sadaka.</p>
                         </div>
 
-                        <div class="step-item"
-                            style="flex: 1; min-width: 200px; padding: 20px; background: white; border-radius: 8px; box-shadow: 0 4px 6px rgba(0,0,0,0.1);">
-                            <div class="step-icon" style="font-size: 40px; color: #d32f2f; margin-bottom: 15px;">03
-                            </div>
-                            <h3 style="font-size: 18px; margin-bottom: 10px;">Xử lý hồ sơ song song</h3>
-                            <p style="font-size: 14px; color: #666;">Trong khi bạn học, Sadaka tiến hành hoàn thiện hồ
-                                sơ xin việc, thẩm định bằng cấp và visa.</p>
+                        <div class="step-item">
+                            <div class="step-icon">03</div>
+                            <h3>Xử lý hồ sơ song song</h3>
+                            <p>Trong khi bạn học, Sadaka tiến hành hoàn thiện hồ sơ xin việc, thẩm định bằng cấp và
+                                visa.</p>
                         </div>
 
-                        <div class="step-item"
-                            style="flex: 1; min-width: 200px; padding: 20px; background: white; border-radius: 8px; box-shadow: 0 4px 6px rgba(0,0,0,0.1);">
-                            <div class="step-icon" style="font-size: 40px; color: #d32f2f; margin-bottom: 15px;">04
-                            </div>
-                            <h3 style="font-size: 18px; margin-bottom: 10px;">Luyện thi & Xuất cảnh</h3>
-                            <p style="font-size: 14px; color: #666;">Luyện đề sát sườn, thi lấy chứng chỉ B1 và tham gia
-                                khóa đào tạo văn hóa hội nhập trước khi bay.</p>
+                        <div class="step-item">
+                            <div class="step-icon">04</div>
+                            <h3>Luyện thi & Xuất cảnh</h3>
+                            <p>Luyện đề sát sườn, thi lấy chứng chỉ B1 và tham gia khóa đào tạo văn hóa hội nhập trước
+                                khi bay.</p>
                         </div>
-
                     </div>
                 </div>
             </section>
