CHORE(conflict): Resolve conflict after lated commit

--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@
           </div>
 
           <div class="service-media">
-            <img src="./assets/img/Slider_2.jpg" alt="Đào tạo ngôn ngữ" />
+            <img src="./public/img/ThucTe_Duc_11.jpg" alt="Đào tạo ngôn ngữ" />
           </div>
         </div>
 
@@ -201,7 +201,7 @@
           </div>
 
           <div class="service-media">
-            <img src="./assets/img/Germany.jpg" alt="Tuyển dụng lao động" />
+            <img src="./public/img/ThucTe_Duc_12.jpg" alt="Tuyển dụng lao động" />
           </div>
         </div>
 
@@ -313,6 +313,42 @@
           </article>
         </div>
       </section>
+
+      <!-- Image Section -->
+      <section class="image-strip-section">
+        <div class="container">
+          <div class="strip-grid">
+            <div class="strip-item">
+              <img src="./public/img/ThucTe_Duc_11.jpg" alt="Hoạt động Sadaka 1" />
+              <div class="strip-overlay"></div>
+            </div>
+
+            <div class="strip-item">
+              <img src="./public/img/ThucTe_Duc_12.jpg" alt="Hoạt động Sadaka 2" />
+              <div class="strip-overlay"></div>
+            </div>
+
+            <div class="strip-item">
+              <img src="https://images.unsplash.com/photo-1599946347371-68eb71b16afc?auto=format&fit=crop&w=800&q=80"
+                alt="Hoạt động Sadaka 3" />
+              <div class="strip-overlay"></div>
+            </div>
+
+            <div class="strip-item">
+              <img src="https://images.unsplash.com/photo-1522202176988-66273c2fd55f?auto=format&fit=crop&w=800&q=80"
+                alt="Hoạt động Sadaka 4" />
+              <div class="strip-overlay"></div>
+            </div>
+
+            <div class="strip-item">
+              <img src="https://images.unsplash.com/photo-1560250097-0b93528c311a?auto=format&fit=crop&w=800&q=80"
+                alt="Hoạt động Sadaka 5" />
+              <div class="strip-overlay"></div>
+            </div>
+          </div>
+        </div>
+      </section>
+      <!-- End Image Section -->
 
       <section class="contact-section" id="contact">
         <div class="contact-header">
@@ -546,10 +582,10 @@
 
   <script src="https://cdn.jsdelivr.net/npm/contentful@latest/dist/contentful.browser.min.js"></script>
 
-  <script src="./public/js/slider_render.js" defer></script>
-  <script src="./public/js/contact_fab.js" defer></script>
-  <script src="./public/js/contact_form_gas.js" defer></script>
-  <script src="./public/js/main.js" defer></script>
+  <script src="./js/slider_render.js" defer></script>
+  <script src="./js/contact_fab.js" defer></script>
+  <script src="./js/contact_form_gas.js" defer></script>
+  <script src="./js/main.js" defer></script>
 </body>
 
 </html>
